e2e/test/modules/gated-launch-to-v1/sleep-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sleep
  group: gated-launch-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sleep
  template:
    metadata:
      labels:
        app: sleep
    spec:
      containers:
      - name: sleep
        image: curlimages/curl
        command: ["/bin/sleep", "infinity"]
        imagePullPolicy: IfNotPresent
