e2e/test/modules/gated-launch-to-v1/helloword-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: helloword
  labels:
    app: helloword
    service: helloword
spec:
  ports:
  - port: 5000
    name: http
  selector:
    app: helloword
