e2e/test/modules/gated-launch-to-v1/helloword-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: helloword
spec:
  hosts:
  - helloword-svc
  http:
  - route:
    - destination:
        host: helloword-svc
        subset: v1
